--- a/blogdefi/pubspec.yaml
+++ b/blogdefi/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   animated_splash_screen: ^1.1.0
   flutter_easyloading: ^3.0.3
   google_nav_bar: ^5.0.5
+  google_fonts: ^2.1.0
+  auto_size_text: ^2.1.0
+  carousel_slider: ^4.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
