--- a/blogdefi/pubspec.yaml
+++ b/blogdefi/pubspec.yaml
@@ -35,7 +35,13 @@ dependencies:
   google_fonts: ^2.1.0
   auto_size_text: ^2.1.0
   carousel_slider: ^4.0.0
-
+  http: ^0.13.4
+  infinite_scroll_pagination: ^3.1.0
+  rxdart: ^0.27.2
+  url_launcher: ^6.0.12
+  flutter_share: ^2.0.0
+  flutter_html: ^2.1.5
+  intl: ^0.17.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
