--- a/blogdefi/pubspec.yaml
+++ b/blogdefi/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.0.12
   flutter_share: ^2.0.0
   flutter_html: ^2.1.5
+  provider: ^6.0.1
   intl: ^0.17.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
