--- a/blogdefi/pubspec.yaml
+++ b/blogdefi/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  firebase_core: ^1.8.0
+  firebase_messaging: ^10.0.9
+  flutter_local_notifications: ^9.0.1
+  shared_preferences: ^2.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
