--- a/blogdefi/pubspec.yaml
+++ b/blogdefi/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0-0.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,6 +35,7 @@ dependencies:
   google_fonts: ^2.1.0
   auto_size_text: ^2.1.0
   carousel_slider: ^4.0.0
+  cached_network_image: ^3.1.0+1
   http: ^0.13.4
   infinite_scroll_pagination: ^3.1.0
   rxdart: ^0.27.2
@@ -47,9 +48,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  firebase_core: ^1.8.0
-  firebase_messaging: ^10.0.9
-  flutter_local_notifications: ^9.0.1
+  firebase_core: ^1.11.0
+  firebase_messaging: ^11.2.5
+  flutter_local_notifications: ^9.2.0
   shared_preferences: ^2.0.8
 dev_dependencies:
   flutter_test:
